# NGS

./: CMakeLists.txt  LICENSE.txt  README.md
Docker/: README.md
Docker/builder/: Dockerfile
contracts/: CMakeLists.txt
contracts/asserter/: CMakeLists.txt  asserter.hpp
contracts/bancor/: CMakeLists.txt  bancor.cpp  bancor.hpp  converter.hpp
contracts/currency/: CMakeLists.txt
libraries/abi_generator/: CMakeLists.txt
libraries/testing/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt
plugins/account_history_api_plugin/: CMakeLists.txt
plugins/account_history_plugin/: CMakeLists.txt
plugins/chain_api_plugin/: CMakeLists.txt
plugins/chain_plugin/: CMakeLists.txt
plugins/faucet_testnet_plugin/: CMakeLists.txt
plugins/http_plugin/: CMakeLists.txt
plugins/mongo_db_plugin/: CMakeLists.txt
plugins/net_api_plugin/: CMakeLists.txt
plugins/net_plugin/: CMakeLists.txt
plugins/producer_plugin/: CMakeLists.txt
plugins/template_plugin/: CMakeLists.txt
plugins/txn_test_gen_plugin/: CMakeLists.txt
plugins/wallet_api_plugin/: CMakeLists.txt
plugins/wallet_plugin/: CMakeLists.txt
programs/: CMakeLists.txt
programs/debug_node/: CMakeLists.txt
programs/keosd/: CMakeLists.txt
programs/ngs-abigen/: CMakeLists.txt
programs/ngs-applesedemo/: CMakeLists.txt  README.md
programs/ngs-launcher/: CMakeLists.txt
programs/nodeos/: CMakeLists.txt
scripts/: CMakeLists.txt
scripts/abi_to_rc/: rc-action-template.md  rc-overview-template.md
tests/: CMakeLists.txt
tools/: CMakeLists.txt
